--- a/examples/index.html
+++ b/examples/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>bazjs!</title>
+  <title>Lily.js!</title>
 </head>
 <body>
 
   <script type="module" src="./app.js"></script>
+
 </body>
 </html>
