--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <script type="module" src="./list.js"></script>
+  <script type="module" src="./app.js"></script>
 
 </body>
 </html>
