updates to seed project

--- a/packages/seed/index.html
+++ b/packages/seed/index.html
@@ -17,7 +17,7 @@
     <a href="http://www.enable-javascript.com" target="_blank" rel="noopener">Please enable JavaScript</a>
   </noscript>
 
-  <script src="./js/app.js"></script>
+  <script type="module" src="./js/app.js"></script>
 
 </body>
 </html>
