updates to seed project

--- a/packages/seed/index.html
+++ b/packages/seed/index.html
@@ -8,13 +8,14 @@
 
   <title>{{ name }}</title>
 
+  <link rel="stylesheet" href="//unpkg.com/lily-css" />
   <link rel="stylesheet" type="text/css" href="./css/app.css" />
 
 </head>
 <body>
 
   <noscript>
-    <a href="http://www.enable-javascript.com" target="_blank" rel="noopener">Please enable JavaScript</a>
+    <a href="//enable-javascript.com">Please enable JavaScript</a>
   </noscript>
 
   <script type="module" src="./js/app.js"></script>
