--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="no-js">
 <head>
+  <title>beta</title>
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>{{ name }}</title>
-
-  <link rel="stylesheet" href="//unpkg.com/lily-css" />
-  <link rel="stylesheet" type="text/css" href="./css/app.css" />
-
+  <script>document.documentElement.className = 'js'</script>
 </head>
 <body>
-
   <noscript>
-    <a href="//enable-javascript.com">Please enable JavaScript</a>
+    <a href="//enable-javascript.com" target="_blank">Enable JavaScript</a>
   </noscript>
 
   <script type="module" src="./js/app.js"></script>
-
 </body>
 </html>
