--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <a href="//enable-javascript.com" target="_blank">Enable JavaScript</a>
   </noscript>
 
-  <script type="module" src="./js/app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
