--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="//enable-javascript.com" target="_blank">Enable JavaScript</a>
   </noscript>
 
+  <div class="app"></div>
+
   <script type="module" src="./app.js"></script>
 </body>
 </html>
