--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-  <title>beta</title>
+  <title>ToDo</title>
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css" />
 
   <script>document.documentElement.className = 'js'</script>
 </head>
@@ -14,8 +15,6 @@
     <a href="//enable-javascript.com" target="_blank">Enable JavaScript</a>
   </noscript>
 
-  <div class="app"></div>
-
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
